// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ebay-page-notice rendering renders attention message story correctly 1`] = `
<svg
  aria-label="Attention"
  class="icon icon--16 icon--attention-filled"
  focusable="false"
  role="img"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-attention-filled-16"
  />
</svg>
`;

exports[`ebay-page-notice rendering renders confirmation message story correctly 1`] = `
<svg
  aria-label="Success"
  class="icon icon--16 icon--confirmation-filled"
  focusable="false"
  role="img"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-confirmation-filled-16"
  />
</svg>
`;

exports[`ebay-page-notice rendering renders dismissible message with cta story correctly 1`] = `
<svg
  aria-label="Congratulations"
  class="icon icon--16 icon--information-filled"
  focusable="false"
  role="img"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-information-filled-16"
  />
</svg>
`;

exports[`ebay-page-notice rendering renders dismissible message with cta story correctly 2`] = `
<svg
  aria-hidden="true"
  class="icon icon--16"
  focusable="false"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-close-16"
  />
</svg>
`;

exports[`ebay-page-notice rendering renders dismissible notice story correctly 1`] = `
<svg
  aria-label="Information"
  class="icon icon--16 icon--information-filled"
  focusable="false"
  role="img"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-information-filled-16"
  />
</svg>
`;

exports[`ebay-page-notice rendering renders information message story correctly 1`] = `
<svg
  aria-label="Information"
  class="icon icon--16 icon--information-filled"
  focusable="false"
  role="img"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-information-filled-16"
  />
</svg>
`;

exports[`ebay-page-notice rendering renders message with footer story correctly 1`] = `
<svg
  aria-label="Congratulations"
  class="icon icon--16 icon--confirmation-filled"
  focusable="false"
  role="img"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-confirmation-filled-16"
  />
</svg>
`;

exports[`ebay-page-notice rendering renders simple usage with id story correctly 1`] = `
<svg
  aria-label="Success"
  class="icon icon--16 icon--confirmation-filled"
  focusable="false"
  role="img"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="#icon-confirmation-filled-16"
  />
</svg>
`;
